--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
         <form>
-            <div>
+            <div class="item">
               <label for="location">Location</label>
               <input
                 id="location"
@@ -48,7 +48,7 @@
               />
             </div>
 
-            <div>
+            <div class="item">
               <label for="arrive">Arrive</label>
               <input
                 id="arrive"
@@ -58,7 +58,7 @@
               />
             </div>
 
-            <div>
+            <div class="item">
               <label for="depart">Depart</label>
               <input
                 id="depart"
@@ -68,7 +68,7 @@
               />
             </div>
 
-            <div>
+            <div class="item">
               <label for="rentalType">Type</label>
               <select id="rentalType" name="rentalType" size="1">
                 <option value="apartment">Apartment</option>
@@ -81,7 +81,7 @@
               </select>
             </div>
 
-            <div>
+            <div class="item">
               <button type="submit">Search</button>
             </div>
         </form>
